# stone-electron

./: .eslintrc.cjs  .gitignore  .gitleaks.toml  .npmrc  .plan  .prettierrc  .releaserc.json  AGENTS.md  CLAUDE.md  COMPONENT_ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  FOLDER_MARKDOWN_MIGRATION.md  FRONTEND_AUDIT.md  QUICKSTART.md  README.md  components.json  cypress.config.ts  drizzle.config.ts  electron-builder.yml  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  react-doctor.config.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vite.worker.config.ts  vitest.config.ts
.githooks/: pre-commit
docs/: AI_PKM_ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CODE_COLORS.md  COMPONENT_ARCHITECTURE.md  COMPOSITES_CHECKLIST.md  COMPOSITES_GUIDE.md  COMPOSITES_IMPLEMENTATION_SUMMARY.md  COMPOSITES_IMPORTS.md  COMPOSITES_QUICK_REF.md  DATABASE_SCHEMA.md  HLD.md  HOW_TO_RUN.md  HYBRID_STORAGE_PLAN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  (+7 more)
scripts/: afterPack.cjs  ask-notes-e2e.ts  backfill-chunks.ts  build-native.sh  build-whisper.sh  convert-png-icon.sh  convert-svg-icons.sh  diagnose-ask-notes.ts  embedding_server.py  fs-scan-only.ts  fs-sync-check.ts  import-orphan-notes.ts  index-all-notes.ts  pyproject.toml  release.sh  rerank-compare.ts  setup-embeddings.sh  suggest-topics.ts  test-blob.ts  test-classify.ts  test-transformers.mjs  uninstall_stone.sh
scripts/aec/: reference_aec.py  reference_dtln_aec.py
(+1204 files in other folders)
