[project]
name = "stone-embeddings"
version = "0.1.0"
description = "MLX Embedding service for Stone notes app"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.5.0",
]

[tool.uv]
dev-dependencies = []
